Fix some Firefox alignment issues
There were 2 alignment issues that needed resolving:

 - The ticks weren't on top of the icons in the Character Select dialog.

 - The dialogs had a horizontal scrollbar because the vertical one has
   width.

This commit also adds the "ghost-vote-toggle" event to the
documentation.

Fixes: #97

--- a/assets/scss/components/_dialog.scss
+++ b/assets/scss/components/_dialog.scss
@@ -30,6 +30,7 @@
     background-color: #fff;
     position: relative;
     width: min(80vw, 30em);
+    max-width: 100%;
     background-image: url("../../img/background-img.jpg");
     margin-left: auto;
     margin-right: auto;
